force-app/main/default/objects/Support_Routing_Config__c/Support_Routing_Config__c.object-meta.xml
<CustomObject>
    <label>Support Routing Config</label>
    <nameField>
        <label>Support Routing Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Routing Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>