force-app/main/default/objects/Support_Routing_Config__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable rule</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>