force-app/main/default/objects/Support_Routing_Config__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Support Routing Configs</relationshipLabel>
    <relationshipName>Support_Routing_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>