force-app/main/default/objects/Support_Routing_Config__c/fields/Support_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue_Id__c</fullName>
    <label>Support Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>