force-app/main/default/objects/Support_Routing_Config__c/validationRules/Require_Product_and_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Product_and_Queue</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    ISBLANK(Product__c),
    ISBLANK(Support_Queue__c)
)</errorConditionFormula>
    <errorMessage>Product and Support Queue must be selected.</errorMessage>
</ValidationRule>